--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: aba20shaikhabdulv@iima.ac.in
 url: https://github.com/jeromelachaud/freelancer-theme
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 keywords: "your keywords, separated by commas"
-skills: "Data Analytics - Data Visualization - Data Engineer"
+skills: "Data Analytics - Data Visualization - Analytics Engineer"
 brief1: "Specilize in Power BI, SQL and Python"
 brief2: "Six Microsoft Azure Data Certified"
 brief3: "Diploma in Business Analytics from 8th ranked B-School in Asia"
