added social on homepage

--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,15 @@ email: vasim@enclyx.com
 # If you do not use one of the following websites, then leave it empty
 # > twitter_username:
 github_username: vasim07
-codepen_username: exampleUser
+codepen_username:
 dev_username: 
-linkedin_username: exampleUser
-twitter_username: 
+linkedin_username: vasim-shaikh-iima/
+twitter_username: vasim07
 stackoverflow_userid: 2519002
-youtube_handle:
+youtube_handle: exampleUser
+upwork_username: exampleUser
+andela_username: exampleUser
+whatsapp:
 
 # ABOUT ME SECTION
 # show_aboutme_card:
