--- a/_data/work_exp.yml
+++ b/_data/work_exp.yml
@@ -31,7 +31,7 @@
     - tag: SQL
     - tag: Data science
 
-- name: Rave Technologies (Reporting Manager
+- name: Rave Technologies (Reporting Manager)
   Period: Dec 2012 - Aug 2019
   descr: "KPI measurement."
   demo:
