--- a/_data/work_exp.yml
+++ b/_data/work_exp.yml
@@ -23,7 +23,7 @@
     - tag: Python
     - tag: Fabric
 
-- name: Willis Towers Watson )
+- name: Willis Towers Watson
   desig: MI Manager
   Period: Aug 2019 - Jan 2020
   descr: "Focus on optimizing productivity and monitoring SLA performance through data-driven insights. Manage a team of four analysts and lead the design of scalable data models tailored to business needs."
